--- a/responsive-ecommerce-website-master/assets/css/style.css
+++ b/responsive-ecommerce-website-master/assets/css/style.css
@@ -277,3 +277,201 @@ img{
     color:var(--dark-color-light);
     font-weight:var(--font-semi);
 }
+
+.offer_bg{
+    background:url('/assets/img/offer.jpg') no-repeat center/cover;
+    text-align:center;
+}
+.offer_data{
+    padding:3.5rem .25rem;
+    background:rgba(0,0,0,.5);
+    color:var(--white-color);
+}
+.offer_title{
+    font-size:var(--h1-font-size);
+    letter-spacing:.2rem;
+    text-transform:uppercase;
+    font-weight:var(--font-semi);
+}
+.offer_description{
+    margin-bottom:var(--mb-2);
+    letter-spacing:.2rem;
+}
+
+.new_container{
+    row-gap:2rem;
+}
+.new_box{
+    position:relative;
+    display:flex;
+    justify-content:center;
+    background-color:var(--gray-color);
+    overflow:hidden;
+}
+.new_box:hover .new_link{
+    bottom:0;
+}
+.new_link{
+    position:absolute;
+    bottom:-100%;
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background:rgba(229,89,71,.2);
+    transition:.3s;
+}
+
+.newsletter{
+    text-align:center;
+}
+.newsletter_description{
+    margin-bottom:var(--mb-2);
+    font-size:var(--small-font-size);
+    color:var(--dark-color-light);
+}
+.newsletter_form{
+    display:grid;
+    grid-template-column:1fr .5fr;
+}
+.newsletter_input{
+    outline:none;
+    border:none;
+    background-color:var(--gray-color);
+    padding:0 1rem;
+}
+
+.sponsors_container{
+    grid-template-column:repeat(2,1fr);
+    row-gap:2rem;
+    padding:1.5rem 0;
+}
+.sponsors_logo{
+    display:flex;
+    justify-content:center;
+}
+.sponsors_logo img{
+    width:80px;
+    filter:opacity(70%);
+}
+.sponsors_logo img:hover{
+    filter:none;
+}
+
+.footer{
+    background-color:var(--dark-color);
+    color:var(--white-color);
+}
+.footer_container{
+    row-gap:1.5rem;
+    margin-bottom:var(--mb-4);
+}
+.footer_title{
+    margin-bottom:var(--mb-1);
+}
+.footer_deal{
+    margin-bottom:var(--mb-2);
+}
+.footer_store{
+    width:100px;
+}
+.footer_link,.footer_social{
+    color:var(--dark-color-light);
+}
+.footer_link:hover{
+    text-decoration:underline;
+}
+.footer_social{
+    font-size:1.3rem;
+    margin-right:var(--mb-1);
+}
+.footer_copy{
+    border-top:1px solid var(--dark-color-light);
+    padding-top:3rem;
+    text-align:center;
+    color:var(--dark-color-light);
+    font-size:var(--small-font-size);
+}
+
+@media screen and (min-width:768px){
+    body{
+        margin:0;
+    }
+    .section-all{
+        margin-bottom:var(--mb-4);
+    }
+    .nav{
+        height:calc(var(--header-height)+1rem);
+        justify-content:initial;
+    }
+    .nav_menu{
+        margin-left:auto;
+    }
+    .nav_list{
+        display:flex;
+    }
+    .nav_item{
+        margin-left:var(--mb-4);
+        margin-bottom:0;
+    }
+    .nav_toggle{
+        display:none;
+    }
+    .home_container{
+        height:100vh;
+    }
+    .home_data{
+        padding:0;
+        height:max-content;
+        align-self:center;
+    }
+    .home_title{
+        line-height:.8;
+        letter-spacing:1.5rem;
+    }
+    .home_img{
+        width:370px;
+    }
+    .collection_container{
+        grid-template-columns:repeat(2,1fr);
+        grid-template-rows:1fr;
+    }
+    .collection_box{
+        padding:.5rem 3rem 0;
+    }
+    .collection_img{
+        width:130px;
+    }
+    .featured_container,
+    .sponsors_container,
+    .footer_container{
+        grid-template-columns:repeat(4,1fr);
+    }
+    .offer_data{
+        padding:5rem 0;
+    }
+    .new_container{
+        grid-template-columns:repeat(3,1fr)
+    }
+    .newsletter_form{
+        width:400px;
+        margin:0 auto;
+    }
+    .footer_container{
+        padding:2rem 0;
+
+    }
+}
+@media screen and (min-width:1024px){
+    .bg-grid{
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .home_data{
+        padding-left:7rem;
+    }
+    .home_img{
+        right:15%;
+    }
+}
